[package]
name = "tragplaces"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.135"
reqwest = { version="0.12.12", features = ["json", "blocking"]  }
strum = "0.26.3"
tokio = { version = "1.43.0", features = ["full"]  }

isocountry = "0.3.2"
futures = "0.3.31"
[features]
# Declare your feature flags
blocking = []
