[package]
name = "google-places-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["Croitoru Cristian <cristianalexandrucroitoru@gmail.com>"]
description = "Unofficial Google Places API for rust."
license = "BSD-3-Clause"
documentation = "https://docs.rs/google_places_api_rs"
repository = "https://github.com/ZmoleCristian/google-places-api-rs"
keywords = ["google", "places", "api", "reviews", "ratings"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

exclude = [
    "tests/*",
]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.135"
reqwest = { version="0.12.12", features = ["json", "blocking"]  }
strum = "0.26.3"
tokio = { version = "1.43.0", features = ["full"]  }
isocountry = "0.3.2"
futures = "0.3.31"
dotenv = "0.15.0"

[features]
blocking = []
